--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "toggle-markdown-task-with-ongoing",
   "main": "./lib/toggle-markdown-task",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Toggle completion of tasks in GitHub-flavored Markdown files (with ongoing)",
   "keywords": [
     "gfm",
@@ -21,5 +21,9 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "coordinates": [
+    45.5191919,
+    -73.5789278
+  ]
 }
